--- a/yes_page.html
+++ b/yes_page.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1 class="header_text">Eu sabia que você ia gostar EU TE AMOOOOOOOO MINHA LINDA MUSA MEU AMOR DOCE DE COCO😊😊😊</h1>
         <div class="gif_container">
-            <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExa3Y2OHpycW45M2tnZWczamZtcnZ0czdodDAyZ3JsbzZ1MXE3Mzd0aSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/cklt9L3pasXKjp4I6q/giphy.gif">
-            <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExdmswdHF3aW5jaDY3ZXNvN3lrenB0aGdnNWIzNG0xMzg1b2JhMTc5ZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Y00mF6fy4LJdDFeN5M/giphy.gif"  alt="capivara GIF">
+            <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExODlqdmdmcm9tcG53bjQycG1oem5ndGcwOTJ6MGdpYTg1NjVmYXRhZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xT1R9VVboMNVMZkPKw/giphy.gif">
+            <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWlrbmFqc2gzcDdpYzczMDZiN3hmZWIxbjl2OXN5OTJsZHBuZnJrOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xT1R9F3B2fUPIOWBZm/giphy.gif"  alt="Te amo">
         </div>
     </div>
 </body>
